--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!--inject:css-->
     <!--endinject-->
-    <style src="/styles/app.css"></style>
+    <style src="/css/app.css"></style>
   </head>
   <body>
     <div class="wrapper">
@@ -16,6 +16,6 @@
     <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <!-- endinject-->
-    <script src="/scripts/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
