Added alert function for test

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div class="m-register__input">
               <input type="text" class="c-input">
             </div>
-            <div class="m-register__btn"><a class="c-btn c-btn-radius c-btn-submit">登録</a></div>
+            <div class="m-register__btn"><a v-on="click: alert" class="c-btn c-btn-radius c-btn-submit">登録</a></div>
           </div>
         </div>
       </section>
