--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,19 @@
   </head>
   <body>
     <div class="l-wrapper">
-      <h1 class="c-headline">TODOサンプル</h1>
-      <section class="m-section m-section--border">
-        <div class="m-register">
-          <div class="m-register__heading">
-            <h2 class="c-heading">新規登録</h2>
-          </div>
-          <div class="m-register__form">
-            <div class="m-register__input">
-              <input type="text" class="c-input">
-            </div>
-            <div class="m-register__btn"><a v-on="click: alert" class="c-btn c-btn-radius c-btn-submit">登録</a></div>
-          </div>
-        </div>
-      </section>
-      <section class="m-section">
-        <h2 class="c-heading">TODOリスト</h2>
-        <ul class="m-list">
-          <li class="m-list__item">
-            <div class="m-item">
-              <p class="m-item__title">TODOタイトル</p>
-              <p class="m-item__btn"><a class="c-btn c-btn-radius c-btn-delete">削除</a></p>
-            </div>
-          </li>
-        </ul>
-      </section>
+      <h1 class="c-headline">イベント一覧</h1>
+      <div id="vm-atnd">
+        <section class="m-section m-section--border"><a href="#" @click="renderAtnd" class="c-btn c-btn-radius c-btn-submit">ATND</a></section>
+        <section class="m-section">
+          <ul class="m-list">
+            <li v-for="item in items" class="m-list__item">
+              <div class="m-item">
+                <p class="m-item__title">{{ item.event.title }}</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </div>
     <script src="/js/app.js"></script>
   </body>
