--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
     <div class="l-wrapper">
       <h1 class="c-headline">イベント一覧</h1>
       <div id="vm-atnd">
+        <section class="m-section m-section--border">
+          <ul class="c-tabs">
+            <li class="c-tab"><a class="c-tab__target">ATND</a></li>
+            <li class="c-tab"><a class="c-tab__target">conpass</a></li>
+            <li class="c-tab"><a class="c-tab__target">doorkeeper</a></li>
+          </ul>
+        </section>
         <section class="m-section m-section--border"><a href="#" @click="renderAtnd" class="c-btn c-btn-radius c-btn-submit">ATND</a></section>
         <section class="m-section">
           <ul class="m-list">
